Bug 387316 - Shift-Tab in Dashboard freezes Plasma
Summary: Shift-Tab in Dashboard freezes Plasma
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Application Dashboard (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR grave
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-26 13:38 UTC by Edwin Clement
Modified: 2018-02-12 11:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edwin Clement 2017-11-26 13:38:41 UTC
Tabbing in Kicker Dashboard does not do anything.
Shift-Tabbing will crash the dashboard, the taskbar.
Krunner still works
Shortcuts for Konsole and show desktop also work.
Comment 1 Christoph Feck 2017-12-04 02:29:47 UTC
Please add the backtrace for the crash. For more information, please read https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
Comment 2 Christoph Feck 2017-12-11 13:47:26 UTC
If you can provide the information requested in comment #1, please add it.
Comment 3 Edwin Clement 2017-12-11 15:03:54 UTC
I actually don't know how to get a backtrace.
I can tell you however, that reinstalling the os on the system again still causes the same issue.

Also, from the page that you gave.
Arch
Arch currently doesn't offer debug packages with symbols (Feature Request). You therefore need to recompile all concerned packages with debugging symbols. See their informative document Getting Traces.
Comment 4 Edwin Clement 2017-12-11 15:04:46 UTC
I have a Manjaro KDE system
And I don't quite know where to start with recompiling.
Comment 5 Edwin Clement 2017-12-11 15:10:47 UTC
If you can tell me how to get the backtrace of a plasmoid, I will certainly get that.
Comment 6 Christoph Feck 2018-01-02 15:16:54 UTC
Even a backtrace without debug symbols can be of help. If you are able to reproduce the crash, please add the backtrace from the 'Developer Information' tab of the crash dialog window to this ticket.
Comment 7 Edwin Clement 2018-01-03 03:50:14 UTC
Sorry, I thought it was clear, but I don't get a crash dialog window. The dashboard just pauses indefinitely. I can switch workspaces, but all kde specific functionality doesn't work, except Krunner.
Comment 8 Christoph Feck 2018-01-10 14:54:27 UTC
Okey, changing title accordingly.
Comment 9 trmdi 2018-02-10 15:35:42 UTC
I can confirm it happens on openSUSE Tumbleweed: Plasma 5.12, Qt 5.10, KF 5.42

When you're opening the Dashboard, you press Shift+Tab, afterwards you can not click anything on the screen.
Comment 10 Eike Hein 2018-02-11 08:44:52 UTC
Reproduced, plasmashell dies somewhere in  QQuickItemPrivate::nextPrevItemInTabFocusChain. I'm looking into it.
Comment 11 Eike Hein 2018-02-12 11:29:03 UTC
Git commit c85eb1aef49e42b0240e1b456d757c644ba142c0 by Eike Hein.
Committed on 12/02/2018 at 10:30.
Pushed by hein into branch 'Plasma/5.12'.

Implement Tab/Backtab navigation

Summary:
I'd like this in the 5.12 branch as it also fixes a shell freeze.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D10456

M  +95   -2    applets/kicker/package/contents/ui/DashboardRepresentation.qml
M  +20   -0    applets/kicker/package/contents/ui/DashboardTabBar.qml
M  +3    -1    applets/kicker/plugin/dashboardwindow.cpp

https://commits.kde.org/plasma-desktop/c85eb1aef49e42b0240e1b456d757c644ba142c0