Implement Tab/Backtab navigation

Summary:
I'd like this in the 5.12 branch as it also fixes a shell freeze.

BUG:387316

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D10456